@@ -123,6 +123,7 @@ try; img.node_data = opts.offset + opts.scale * img.node_data; end
 %  A DIFFERENT ORDER. Example
 %>> A.a= 1; A.b= 2; B.b= 3; B.a = 3; A(2) = B
 %??? Subscripted assignment between dissimilar structures.
+img.error = NaN;
 img = orderfields(img);
 
 % calculate residuals
@@ -134,11 +135,11 @@ end
 if ~do_calc, return, end
 try
    if opts.abs_solve
-      err = calc_solution_error( imgc, inv_model, fdata);
+      img.error = calc_solution_error( imgc, inv_model, fdata);
    else
-      err = calc_solution_error( imgc, inv_model, fdata1, fdata2 );
+      img.error = calc_solution_error( imgc, inv_model, fdata1, fdata2 );
    end
-   eidors_msg('inv_solve: Solution Error: %f', err,  2);
+   eidors_msg('inv_solve: Solution Error: %f', img.error,  2);
 catch
    eidors_msg('inv_solve: Solution Error calculation failed.',2);
 end
